--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/stack": "^6.3.14",
     "expo": "^47.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
